# Tetoris

./: .gitignore  CMakeLists.txt  RCa14084  README.md  teto.rc
src/: Tetoris.cpp
